# Labora

./: .env.example  .gitignore  README.md  config.json.example  package.json
backend/: main.py  pyproject.toml
backend/data/: labora.db
backend/labora/: __init__.py
backend/labora/agent/: __init__.py  deep_reader.py  paper_reader.py  prompts.py  research_agent.py  research_workflow.py
backend/labora/api/: __init__.py  app.py
backend/labora/api/routes/: deep_read.py  health.py  literature.py  papers.py  research.py  research_agent.py
backend/labora/core/: __init__.py  config.py
backend/labora/memory/: __init__.py  interface.py  long_term.py  manager.py  short_term.py
backend/labora/persistence/: agent_store.py
backend/labora/services/: __init__.py  literature_library.py
backend/labora/tools/: __init__.py  arxiv_rate_limiter.py  arxiv_tool.py  latex_parser.py  latex_typesetter.py  semantic_scholar.py
backend/tests/agent/: test_deep_reader.py  test_paper_reader.py  test_paper_reader_integration.py  test_research_agent_error_recovery.py  test_research_workflow.py  test_research_workflow_integration.py
backend/tests/api/: test_research_agent_error_snapshot.py  test_routes.py
backend/tests/core/: test_config.py
backend/tests/memory/: test_long_term.py  test_manager.py  test_short_term.py
backend/tests/persistence/: test_agent_store.py
backend/tests/tools/: test_arxiv_tool.py  test_latex_parser.py  test_latex_typesetter.py  test_semantic_scholar.py
desktop/: package-lock.json  package.json  tsconfig.electron.json
docs/: architecture.md  (+7 more)
(+35 files in other folders)
